# axum-tenant

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  discriminator.rs
src/: lib.rs
tenant-axum/: Cargo.toml
tenant-axum/src/: claims.rs  config.rs  context.rs  extractor.rs  lib.rs  metrics.rs  middleware.rs  oidc.rs  resolver.rs
tenant-axum/tests/: integration_tests.rs
tenant-core/: Cargo.toml
tenant-core/src/: config.rs  context.rs  error.rs  lib.rs  resolver.rs  tenant.rs
tenant-core/tests/: core_tests.rs
tenant-sea-orm/: Cargo.toml
tenant-sea-orm/src/: compat.rs  connection.rs  database.rs  discriminator.rs  filter.rs  lib.rs  middleware.rs  provisioning.rs  rls.rs  schema.rs
tests/: facade_tests.rs  ferriskey_jwt_integration.rs  postgres_integration.rs
