[package]
name = "tenant-axum"
version = "0.1.0"
edition = "2021"
description = "Axum integration for tenant-core — HTTP resolvers, middleware, and extractors"
license = "MIT"

[dependencies]
tenant-core = { path = "../tenant-core" }
axum = { version = "0.8" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
openidconnect = { version = "4", optional = true, default-features = false, features = ["reqwest-blocking", "rustls-tls"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "blocking", "json"] }
tokio = { version = "1", optional = true, features = ["sync"] }

[features]
default = []
oidc = ["dep:openidconnect", "dep:reqwest", "dep:tokio"]

[dev-dependencies]
axum = { version = "0.8", features = ["tokio"] }
http = "1"
jsonwebtoken = "9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
