[package]
name = "tenant-axum"
version = "0.1.0"
edition = "2021"
description = "Axum integration for tenant-core — HTTP resolvers, middleware, and extractors"
license = "MIT"
repository = "https://github.com/pehlivanoglu/axum-tenant"
keywords = ["multi-tenancy", "axum", "middleware", "tenant"]
categories = ["web-programming"]
rust-version = "1.75"

[dependencies]
tenant-core = { path = "../tenant-core" }
axum = { version = "0.8" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.8", features = ["tokio"] }
http = "1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
